--- a/myswapi/package.json
+++ b/myswapi/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-router-dom": "^6.22.1",
     "zustand": "^4.5.1"
   },
